# bowling-game-kata

./: README.md  constraints.md  pyproject.toml
.cursor/rules/: assignment-instructions.mdc  interview-structure.mdc  study-session.mdc
src/bowling_game_kata/: main.py
tests/: test_main.py
