[tool.poetry]
name = "bowling-game-kata"
version = "0.1.0"
description = "Python implementation of the bowling game kata"
authors = ["Connor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.5"
pydantic = "^2.11.4"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
